--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="logo-holder"> 
                 <a href="index.html" class="logo-link">
-                    <img src="/img/logo.png" alt="Aurora" class="logo">
+                    <img src="./img/logo.png" alt="Aurora" class="logo">
                 </a>
             </div>
         </header>
